<resources>
    <string name="app_name">Frotas de Escolar</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="insira_seu_email">Insira seu email</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="confirme_sua_senha">Confime sua senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="descricao">Descrição</string>
    <string name="telefone">Telefone</string>
    <string name="bairros">Bairros</string>
    <string name="salvar">Salvar</string>
    <string name="entrar">Entrar</string>
    <string name="criar_uma_conta">Criar uma conta</string>
    <string name="motorista">Motorista</string>
    <string name="cliente">Cliente</string>
    <string name="instituicoes">Intistuições de Ensino Atendidas</string>
    <string name="listar">listar</string>
    <string name="nao_tem_conta">Não tem uma conta ainda?</string>
    <string name="ou">ou</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="telefone__2">Telefone:</string>
    <string name="imagens">Galeria do escolar</string>
    <string name="cliques">Número de acessos:</string>
    <string name="quantidade"> </string>
    <string name="resposta_nome"> </string>
    <string name="resposta_email"> </string>
    <string name="empty_body"> </string>
    <string name="foto_descricao_app">Foto VanWay com a logo do app</string>
    <string name="foto_descricao">Foto</string>
</resources>
